@@ -563,3 +563,4 @@ Issue #2205707: Added permission for workflow_comment_edit_link field handler fr
 Issue #2211145: Grouped workflow action buttons together with Drupal buttons ([Save], [Preview]).
 Issue #2283821: Fixed error in hook_update_7007() due to schema changes, when Upgrading from old D6/D7-version to 7.x-2.x.
 Fixed code style errors, as reported by pareview.sh and coder module.
+Issue #2299883: Fixed invalid WorkflowConfigTransitions created when cloning a Workflow.
